<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlist_detail.PlaylistDetailActivity">
    <include
        android:id="@+id/network_layout"
        android:visibility="gone"
        layout="@layout/error_internet" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/details_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/small_dimens"
            android:layout_height="56dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_display"
                    android:text="@string/back"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/ic_left" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:textSize="20sp"
                android:textColor="@color/red"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_toolbar"/>

        </Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:backgroundTint="@color/grey"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapse_toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:backgroundTint="@color/red"
                    android:fitsSystemWindows="true"
                    app:contentScrim="@color/black"
                    app:expandedTitleGravity="center_horizontal|bottom"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                    <LinearLayout
                        android:paddingVertical="24dp"
                        android:paddingHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/playlist_title"
                            android:text="@string/title_example"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="@font/fjalla_one_regular"
                            android:maxLines="2"
                            android:textColor="#333333"
                            android:fitsSystemWindows="true"
                            app:layout_collapseMode="parallax"/>

                        <TextView
                            android:id="@+id/playlist_description"
                            android:text="@string/text_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:fontFamily="@font/noto_sans"
                            android:textColor="#333333"
                            android:fitsSystemWindows="true"
                            app:layout_collapseMode="parallax"/>

                    </LinearLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar_detail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:layout_collapseMode="pin"/>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videosRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_videos" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>